added books page

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <img src="assets/Library.svg" alt="library logo" class="logo">
             <ul class="nav__links">
                 <li class="nav__link">
-                    <a href="" class="nav__link--button">Home</a>
+                    <a href="#" class="nav__link--button">Home</a>
                 </li>
                 <li class="nav__link">
                     <a href="" class="nav__link--button">Contact</a>
                 </li>
                 <li class="nav__link">
-                    <a href="" class="nav__link--button">Books</a>
+                    <a href="books.html" class="nav__link--button">Books</a>
                 </li>
             </ul>
             <button class="btn__menu" onclick="openMenu()">
@@ -41,7 +41,9 @@
         </nav>
         <h2 class="landing__title">Australia's most awarded online library platform</h2>
         <h3 class="landing__subtitle">Find your dream book with <span class="text--purple">Library</span></h3>
-        <button class="bookslink">Browse Books</button>
+        <div class="browse__container">
+            <a href="books.html" class="bookslink">Browse Books</a>
+        </div>
         <img src="assets/Undraw_Books.svg" alt="" class="introimg">
     </section>
     <section id="highlights">
@@ -226,14 +228,16 @@
     </section>
     <section id="explore">
         <h2 class="section__title">Explore more <span class="text--purple">Books</span></h2>
-        <button class="bookslink">Browse Books</button>
+        <div class="browse__container">
+            <a href="books.html" class="bookslink">Browse Books</a>
+        </div>
     </section>
     <footer>
         <img src="assets/Library.svg" alt="footer library logo" class="footer__logo">
         <div class="footer__links">
             <a href="#" class="footer__link">Home</a>
             <a href="" class="footer__link">About</a>
-            <a href="" class="footer__link">Books</a>
+            <a href="books.html" class="footer__link">Books</a>
             <a href="" class="footer__link">Contact</a>
         </div>
         <p class="copyright">Copyright © 2024 Library</p>
